[gd_scene load_steps=21 format=3 uid="uid://0btuj42nxe1i"]

[ext_resource type="Script" path="res://scenes/player/Player.gd" id="1_eb6ph"]
[ext_resource type="Texture2D" uid="uid://dbxat6bctpln2" path="res://assets/main-character/adventurer-1.3-Sheet.png" id="2_spc03"]
[ext_resource type="Script" path="res://scenes/state_machine/StateMachine.gd" id="3_fabrc"]
[ext_resource type="Script" path="res://scenes/player/Idle.gd" id="4_3m6jm"]
[ext_resource type="Script" path="res://scenes/player/Running.gd" id="5_t3tsx"]
[ext_resource type="Script" path="res://scenes/player/JumpSquatting.gd" id="6_aa181"]
[ext_resource type="Script" path="res://scenes/player/Jumping.gd" id="7_o84w3"]
[ext_resource type="Script" path="res://scenes/player/Falling.gd" id="8_o8olj"]
[ext_resource type="Script" path="res://scenes/player/WallSliding.gd" id="9_hkerg"]
[ext_resource type="Script" path="res://scenes/player/WallJumping.gd" id="10_dwqfi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0r7q6"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5jqt"]
size = Vector2(15, 20)

[sub_resource type="Animation" id="Animation_lmu57"]
length = 0.001

[sub_resource type="Animation" id="Animation_f7svv"]
resource_name = "falling"
length = 0.3333
loop_mode = 1
step = 0.1666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1666),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 4)]
}

[sub_resource type="Animation" id="Animation_epjd6"]
resource_name = "idle"
length = 0.664
loop_mode = 1
step = 0.166
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166, 0.332, 0.498),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_tjnb7"]
resource_name = "jumpSquatting"
length = 0.0501
step = 0.0167
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0167),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_7fraf"]
resource_name = "jumping"
length = 0.1333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-2, 2)]
}

[sub_resource type="Animation" id="Animation_y3xn6"]
resource_name = "running"
length = 0.9996
loop_mode = 1
step = 0.1666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1666, 0.3332, 0.4998, 0.6664, 0.833),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 0)]
}

[sub_resource type="Animation" id="Animation_40lqm"]
resource_name = "wall_sliding"
length = 0.3333
loop_mode = 1
step = 0.1666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1666),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [79, 80]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xowt7"]
_data = {
"RESET": SubResource("Animation_lmu57"),
"falling": SubResource("Animation_f7svv"),
"idle": SubResource("Animation_epjd6"),
"jump_squatting": SubResource("Animation_tjnb7"),
"jumping": SubResource("Animation_7fraf"),
"running": SubResource("Animation_y3xn6"),
"wall_sliding": SubResource("Animation_40lqm")
}

[node name="Player" type="CharacterBody2D"]
floor_constant_speed = true
floor_snap_length = 32.0
script = ExtResource("1_eb6ph")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_spc03")
hframes = 8
vframes = 12

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_0r7q6")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_fabrc")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_3m6jm")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("5_t3tsx")

[node name="JumpSquatting" type="Node" parent="StateMachine"]
script = ExtResource("6_aa181")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("7_o84w3")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("8_o8olj")

[node name="WallSliding" type="Node" parent="StateMachine"]
script = ExtResource("9_hkerg")

[node name="WallJumping" type="Node" parent="StateMachine"]
script = ExtResource("10_dwqfi")

[node name="TestArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestArea2D"]
position = Vector2(14.5, 3)
shape = SubResource("RectangleShape2D_l5jqt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xowt7")
}

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/JumpSquatting" method="_on_animation_player_animation_finished"]
